--- a/src/style/tpl_style/tabbar_style.less
+++ b/src/style/tpl_style/tabbar_style.less
@@ -18,11 +18,15 @@
 
       color:#666;
       img{
-        .w(25);
+        .w(20);
         display: block;
         margin: 0 auto;
         margin-top: 3px;
       }
+      .cur{
+        color: #20b2aa;
+      }
     }
+
   }
 }
